--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ https://www.w3schools.com/tags/default.asp    (HTLML references)
         <meta charset="utf8"> <!-- search info about charset -->
         <title> Discovering China </title>
         <link rel="stylesheet" href="cssnotes.css">
+        <link rel="icon" href="./IMG/pitahaya.png" />
     </head>
     <body > <!-- visible part -->
         <div class="navbar">
